package librarysystem;

public enum  BookStatus {
    AVAILABLE,
    BORROWED
//    RESERVED
}
